@@ -1,0 +1,1 @@
+Make IDLE invoke :func:`sys.excepthook` in normal, 2-process mode.
