@@ -3,6 +3,9 @@ Released on 2021-02-15?
 ======================================
 
 
+bpo-43008: Make IDLE invoke :func:`sys.excepthook` in normal,
+2-process mode.
+
 bpo-33065: Fix problem debugging user classes with __repr__ method.
 
 bpo-32631: Finish zzdummy example extension module: make menu entries
